--- a/web/views/cv.html.twig
+++ b/web/views/cv.html.twig
@@ -354,7 +354,7 @@
                         </ul>
                     </div>
 
-                    <a class="btn btn-default page-scroll" href="#skills">Click Me to Scroll Down!</a>
+                    <!-- <a class="btn btn-default page-scroll" href="#skills">Click Me to Scroll Down!</a> -->
                 </div>
             </div>
         </div>
@@ -366,7 +366,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>{{ 'app.title.skills'|trans }}</h1>
-                    <a class="btn btn-default page-scroll" href="#activities">Click Me to Scroll Down!</a>
+                    <!-- <a class="btn btn-default page-scroll" href="#activities">Click Me to Scroll Down!</a> -->
                 </div>
             </div>
         </div>
@@ -378,7 +378,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>{{ 'app.title.activities'|trans }}</h1>
-                    <a class="btn btn-default page-scroll" href="#contact">Click Me to Scroll Down!</a>
+                    <!-- <a class="btn btn-default page-scroll" href="#contact">Click Me to Scroll Down!</a> -->
                 </div>
             </div>
         </div>
@@ -390,7 +390,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>{{ 'app.title.contact'|trans }}</h1>
-                    <a class="btn btn-default page-scroll" href="#intro">Go back to the top!</a>
+                    <!-- <a class="btn btn-default page-scroll" href="#intro">Go back to the top!</a> -->
                 </div>
             </div>
         </div>
